# scratch-emulator

./: .gitignore  README.md  pyproject.toml
notebooks/: aug18-wl-as-input-gptorch-.ipynb  aug22-atmo-sensitivity.ipynb  aug22-multi-wl.ipynb  aug22-single-wl.ipynb  aug29-sampling.ipynb  aug29-single-pca.ipynb  aug29-spectrum-pca-gpflow.ipynb  aug29-spectrum-pca.ipynb  example.ipynb  nov07-interp-comparison.ipynb  oct16-single-wl-timing.ipynb  oct_slides_scratch.ipynb  sep07-dim-perf.ipynb  sep07-subprocess-bench.ipynb
src/rtm_wrapper_gp/: __init__.py
src/scratch_emulator/: __init__.py
