[tool.poetry]
name = "rtm-wrapper-gui"
version = "0.1.0-dev"
description = ""
authors = ["Brian Schubert <schubert.b@northeastern.edu>"]
readme = "README.md"
packages = [{ from = "src", include = "rtm_wrapper_gp" }]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.nb.dependencies]
jupyter = "^1.0.0"
matplotlib = "^3.7.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

